// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App UI > UI rendering > should render correctly on a narrow terminal 1`] = `
"
 I'm Feeling Lucky
(esc to cancel, 0s)



/test/dir

no sandbox (see /docs)

model (100% context left)"
`;

exports[`App UI > UI rendering > should render correctly on a wide terminal 1`] = `
"
 I'm Feeling Lucky (esc to cancel, 0s)


/test/dir                no sandbox (see /docs)                  model (100% context left)"
`;

exports[`App UI > UI rendering > with prompt input box > should render correctly on a narrow terminal 1`] = `
"


╭────────────────────────────────────────────────────────────────────────────────────────╮
│ >   Type your message or @path/to/file                                                 │
╰────────────────────────────────────────────────────────────────────────────────────────╯
/test/dir

no sandbox (see /docs)

model (100% context left)"
`;

exports[`App UI > UI rendering > with prompt input box > should render correctly on a wide terminal 1`] = `
"

╭────────────────────────────────────────────────────────────────────────────────────────╮
│ >   Type your message or @path/to/file                                                 │
╰────────────────────────────────────────────────────────────────────────────────────────╯
/test/dir                no sandbox (see /docs)                  model (100% context left)"
`;
